# Server

./: .gitignore  README.md
Sockets/: CMakeLists.txt  IO_completion_port.cpp  IO_completion_port.h  Sockets.cbp  WSA_holder.h  abstract_server.cpp  abstract_server.h  client_socket_2.cpp  client_socket_2.h  getaddrinfo_executer.cpp  getaddrinfo_executer.h  logger.cpp  logger.h  socket.cpp  socket.h  socket_descriptor.cpp  sockets.h  timers.cpp  timers.h
client/: CMakeLists.txt  client.cbp  main.cpp
echo_server/: main.cpp  sockets_wrapper.h
echo_server/client/: client.cbp  main.cpp
echo_server/echo_server/: echo_server.cbp  main.cpp  sockets_wrapper.cpp  sockets_wrapper.h
echo_server/echo_server_and_IOCP/: IO_completion_port.cpp  IO_completion_port.h  abstract_server.cpp  abstract_server.h  client_socket_2.cpp  client_socket_2.h  echo_server.cpp  echo_server.h  echo_server_and_IOCP.cbp  getaddrinfo_executer.cpp  getaddrinfo_executer.h  (+12 more)
echo_server_and_IOCP/: CMakeLists.txt  echo_server.cpp  echo_server.h  echo_server_and_IOCP.cbp  main.cpp  questions.txt  test_server.h
http_client/: CMakeLists.txt  http_client.cbp  main.cpp
http_utils/: CMakeLists.txt  http_message.cpp  http_message.h  http_reader.cpp  http_reader.h  http_request.cpp  http_request.h  http_utils.cbp  http_utils.h  http_writer.cpp  http_writer.h  my_assert.cpp  my_assert.h
proxy_server/: CMakeLists.txt  http_reader.cpp  http_reader.h  http_request.cpp  http_request.h  http_writer.cpp  http_writer.h  main.cpp  my_assert.cpp  my_assert.h  proxy_server.cbp  proxy_server.cpp  proxy_server.h
